--- a/templates/main-page.html
+++ b/templates/main-page.html
@@ -40,5 +40,7 @@
     
 </body>
 <script src="{% static 'uikit/app.js' %}"></script>
+<script src="{% static 'js/main.js' %}"></script>
+
 
 </html>
