--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -9,7 +9,7 @@
       </div>
 
       <div class="hero-section__search">
-        <form class="form" action="{% url 'home' %}" method="get">
+        <form id="searchForm" class="form" action="{% url 'home' %}" method="get">
           <div class="form__field">
             <label for="formInput#search">Search Developers </label>
             <input
