--- a/projects/templates/projects/view-project.html
+++ b/projects/templates/projects/view-project.html
@@ -45,18 +45,15 @@
             Vote{{project.vote_total | pluralize:"s" }})
           </h5>
 
-          <form class="form" action="#" method="POST">
+          <form class="form" action="{% url 'view-project' project.id %}" method="POST">
             {% csrf_token %}
             <!-- Textarea -->
+            {% for field in form %}
             <div class="form__field">
-              <label for="formInput#textarea">Comments: </label>
-              <textarea
-                class="input input--textarea"
-                name="message"
-                id="formInput#textarea"
-                placeholder="Write your comments here..."
-              ></textarea>
+              <label for="formInput#textarea">{{field.label}}</label>
+              {{field}}
             </div>
+            {% endfor %}
             <input
               class="btn btn--sub btn--lg"
               type="submit"
