--- a/projects/templates/projects/view-project.html
+++ b/projects/templates/projects/view-project.html
@@ -70,7 +70,7 @@
             </form>
 
             {% else %}
-            <p>You need to <a href="{% url 'login' %}">login</a> to review this project</p>
+            <p>You need to <a href="{% url 'login-page' %}?next={{request.path}}">login</a> to review this project</p>
 
           {% endif %}
 
