--- a/users/templates/users/login-page.html
+++ b/users/templates/users/login-page.html
@@ -63,7 +63,7 @@
       </div>    
 
 
-      <form action="{% url 'login-page' %}" method="POST" class="form auth__form">
+      <form action="" method="POST" class="form auth__form">
         {% csrf_token %}
         <!-- Input:Email -->
         <div class="form__field">
