--- a/templates/navibar.html
+++ b/templates/navibar.html
@@ -17,10 +17,12 @@
         <li class="header__menuItem">
           <a href="{% url 'projects' %}">Projects</a>
         </li>
-        <li class="header__menuItem"><a href="inbox.html">Inbox</a></li>
+        
         
         <!--My Acccount-->
         {% if request.user.is_authenticated %}
+        <li class="header__menuItem"><a href="{% url 'inbox' %}">Inbox</a></li>
+        
         <li class="header__menuItem">
           <a href="account.html"
             ><a href="{%  url 'user-account' %}">My Acccount</a></a
