--- a/users/templates/users/message_form.html
+++ b/users/templates/users/message_form.html
@@ -9,12 +9,29 @@
         <br />
   
         <form class="form" method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
     
-          <div class="form__field">
-            <label for="formInput#text">{{field.label}}</label>
-            {{field}}
-          </div>
+            {% if request.user.is_authenticated == False %}
+            <div class="form__field">
+                <label for="formInput#text">{{form.name.label}}</label>
+                {{form.name}}
+            </div>
 
+            <div class="form__field">
+                <label for="formInput#text">{{form.email.label}}</label>
+                {{form.email}}
+            </div>
+            {% endif %}
+
+            <div class="form__field">
+                <label for="formInput#text">{{form.subject.label}}</label>
+                {{form.subject}}
+            </div>
+
+            <div class="form__field">
+                <label for="formInput#text">{{form.body.label}}</label>
+                {{form.body}}
+            </div>
 
           <input
             class="btn btn--sub btn--lg my-md"
